# assignment-2

./: README.md  config.cabal
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: Main.hs  Valor.hs
test/: MainSpec.hs
