cabal-version:      3.0
name:               assignment2
version:            1.0.0

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Valor
    build-depends:    base

executable vendas
    default-language: Haskell2010
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Valor
    build-depends:    base

test-suite função
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MainSpec.hs
    build-depends:    base
                    , hspec
                    , QuickCheck
                    , assignment2
